<resources>
    <string name="app_name">HelloLayout19110239</string>
    <string name="stella_sunglasses">Stella Sunglasses</string>
    <string name="vagabond_sack">Vagabond Sack</string>
    <string name="_120">$120</string>
    <string name="_58">$58</string>
    <string name="whitney_belt">Whitney Belt</string>
    <string name="_35">$35</string>
    <string name="garden_strand">Garden Strand</string>
    <string name="_98">$98</string>
    <string name="thing">Thing</string>
    <string name="_7">$7</string>
    <string name="sock">Sock</string>
    <string name="_5">$5</string>
</resources>