<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
        <TableRow>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="5"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:background="@color/background_card">

                <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bag" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="bottom"
                        android:text="@string/vagabond_sack"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:text="@string/_120"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="5"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:background="@color/background_card">

                <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sunglasses" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="bottom"
                        android:text="@string/stella_sunglasses"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:text="@string/_58"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </LinearLayout>
        </TableRow>

        <TableRow>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="5"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:background="@color/background_card">

                <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:scaleType="centerCrop"
                    android:src="@drawable/belt" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="bottom"
                        android:text="@string/whitney_belt"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:text="@string/_35"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="5"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:background="@color/background_card">

                <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ring" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="bottom"
                        android:text="@string/garden_strand"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:text="@string/_98"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </LinearLayout>
        </TableRow>

        <TableRow>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="5"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:background="@color/background_card">

            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:scaleType="centerCrop"
                android:src="@drawable/thing" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="bottom"
                    android:text="@string/thing"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/_7"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="5"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:background="@color/background_card">

            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:scaleType="centerCrop"
                android:src="@drawable/sock" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="bottom"
                    android:text="@string/sock"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/_5"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>
    </TableRow>

    </TableLayout>
</ScrollView>
